# fatty_acid

./: Cargo.toml  README.adoc
special/: mod.rs
special/mature_milk/: MatureMilk.ron  mod.rs
src/: const.rs  fatty_acid.rs  lib.rs  new_fatty_acid.rs
src/fatty_acid/: display.rs  mod.rs
src/fatty_acid/polars/: column.rs  data_frame.rs  mod.rs
src/fatty_acid/polars/expr/: fatty_acid.rs  filter.rs  find.rs  mod.rs  short.rs
src/fatty_acid/polars/series/: mod.rs  unsaturated.rs
src/polars/: mod.rs
src/polars/column/: mod.rs
src/polars/data_frame/: mod.rs
src/polars/expr/: fatty_acid.rs  mod.rs
src/polars/series/: fatty_acids.rs  mod.rs
