[package]
edition = "2024"
name = "fatty_acid"
version = "0.1.0"

[dependencies]
atom = { git = "https://github.com/ippras/atom" }
polars = { version = "0.45.1", default-features = false, features = [
    "abs",
    "dtype-categorical",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "lazy",
    "list_any_all",
    "list_eval",
    # "regex",
    "round_series",
    "serde-lazy",
    # "strings",
    #
    "fmt_no_tty",
] }
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive", "std"] }
